# badam-sat

./: .gitignore  Cargo.toml  build.sh  index.html  style.scss
badam-sat/: Cargo.toml
badam-sat-client/: Cargo.toml  index.html  style.css  style.scss
badam-sat-client/src/components/: app.rs  player.rs  playing_area.rs
badam-sat-server/: Cargo.toml
badam-sat-server/src/: errors.rs  lib.rs  main.rs  rooms.rs  server.rs
badam-sat/src/: games.rs  players.rs
src/: errors.rs  games.rs  lib.rs  main.rs  players.rs  server.rs
src/components/: app.rs  mod.rs  player.rs  playing_area.rs
