[package]
name = "badam-sat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
badam-sat = { git = "https://github.com/scimas/badam-sat.git", version = "0.1.0", features = [
    "serde",
] }
card-deck = { git = "https://github.com/scimas/card-deck.git", version = "0.1.0", features = [
    "serde",
    "standard-deck",
] }
futures-util = "0.3.28"
getrandom = { version = "0.2.10", features = ["js"] }
gloo-dialogs = "0.1.1"
gloo-net = "0.3.0"
serde = { version = "1.0.172", features = ["derive"] }
serde_json = "1.0.103"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }
