[package]
name = "badam-sat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["headers"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
badam-sat = { git = "https://github.com/scimas/badam-sat.git", version = "0.1.0", features = [
    "serde",
] }
card-deck = { git = "https://github.com/scimas/card-deck.git", version = "0.1.0", features = [
    "standard-deck",
    "serde",
] }
clap = { version = "4.3.17", features = ["derive"] }
ed25519-compact = { version = "2.0.4", default-features = false, features = [
    "pem",
] }
log = "0.4.19"
pasetors = { version = "0.6.7", features = [
    "v4",
    "std",
], default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
simple_logger = "4.2.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
