[package]
name = "badam-sat-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["headers"] }
badam-sat = { path = "../badam-sat", version = "0.2.0", features = ["serde"] }
card-deck = { git = "https://github.com/scimas/card-deck.git", version = "0.2.1", tag = "v0.2.1", features = [
    "standard-deck",
    "serde",
] }
log = "0.4.19"
pasetors = { version = "0.6.7", features = [
    "v4",
    "std",
], default-features = false }
# https://github.com/serde-rs/serde/issues/2538
serde = { version = ">= 1.0, <= 1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.57"
tokio = { version = "1.29.1", features = ["macros"] }
tower-http = { version = "0.4.3", features = ["fs"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
