[package]
name = "badam-sat"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card-deck = { git = "https://github.com/scimas/card-deck.git", version = "0.2.2", tag = "v0.2.2", features = [
    "standard-deck",
] }
rand = "0.8.5"
# https://github.com/serde-rs/serde/issues/2538
# https://github.com/serde-rs/serde/releases/tag/v1.0.184
serde = { version = "1.0.184", features = [
    "derive",
], optional = true }
thiserror = "1.0.40"

[features]
serde = ["dep:serde", "card-deck/serde"]
